# pyre

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  eu_report.md  eu_report_assessment.md  memoryview.plan.md  tagged-int.plan.md
majit/majit-backend-cranelift/: Cargo.toml
majit/majit-backend-cranelift/src/: compiler.rs  guard.rs  lib.rs
majit/majit-backend-cranelift/tests/: integration.rs
majit/majit-backend-wasm/: Cargo.toml
majit/majit-backend-wasm/src/: codegen.rs  failguard.rs  glue.rs  lib.rs
majit/majit-backend-wasm/tests/: codegen_test.rs
majit/majit-charon-reader/: Cargo.toml  README.md
majit/majit-charon-reader/examples/: dump_stats.rs  probe_errors.rs
majit/majit-charon-reader/src/: lib.rs  schema.rs  ullbc.rs
majit/majit-charon-reader/tests/: corpus.rs
majit/majit-macros/: Cargo.toml
majit/majit-macros/src/: jit_struct.rs  lib.rs
majit/majit-macros/src/jit_interp/: call_policy_byte.rs  codegen_state.rs  codegen_trace.rs  green_type_tag.rs  jitcode_lower.rs  mod.rs
majit/majit-macros/src/jit_interp/jitcode_lower/: api.rs  dispatch.rs  helpers.rs  jit_state_analysis.rs  liveness.rs  lower_control.rs  lower_stmt.rs  lower_vable.rs  lower_value.rs  lowerer.rs  mod.rs
majit/majit-macros/tests/: driver_test.rs  jit_module_test.rs  macros.rs
majit/majit-translate/: Cargo.toml
majit/majit-translate/docs/: design-346-foreign-lib-cluster-epic.md
majit/majit-translate/src/: codegen.rs  generated.rs  handler_spec.rs  hints.rs  inline.rs  layout.rs  lib.rs  local_crates.rs  model.rs  parse.rs  pipeline.rs  test_support.rs
majit/majit-translate/src/annotator/: annrpython.rs  argument.rs  binaryop.rs  bookkeeper.rs  builtin.rs  classdesc.rs  description.rs  mod.rs  model.rs  policy.rs  specialize.rs  unaryop.rs
majit/majit-translate/src/codewriter/: assembler.rs  call.rs  codewriter.rs  effectinfo.rs  flatten.rs  format.rs  heaptracker.rs  insns.rs  jitcode.rs  jtransform.rs  liveness.rs  policy.rs  regalloc.rs
majit/majit-translate/src/config/: support.rs
majit/majit-translate/src/flowspace/: argument.rs  flowcontext.rs  framestate.rs  generator.rs  mod.rs  model.rs  objspace.rs  operation.rs  specialcase.rs
majit/majit-translate/src/flowspace/rust_source/: build_flow.rs  host_env.rs  mod.rs  register.rs
majit/majit-translate/src/front/: ast.rs  bigint_div_mod_floor.rs  bool_then.rs  iter_next.rs  llbc_hints.rs  mir.rs  mir_dispatch.rs  mod.rs  opcode_wrapper.rs  option_closure_select.rs  option_map_or.rs  option_try.rs  option_unwrap_or.rs  raise.rs  range_contains.rs  result_exc.rs  semantic.rs  syn_metadata.rs  typestr.rs
majit/majit-translate/src/jit_codewriter/: annotation_state.rs  assembler.rs  call.rs  codewriter.rs  flatten.rs  format.rs  insns.rs  jitcode.rs  jtransform.rs  liveness.rs  mod.rs  policy.rs  regalloc.rs  support.rs  transform_profile.rs  type_state.rs
majit/majit-translate/src/rlib/: jit.rs
majit/majit-translate/src/tool/: ansi_print.rs  error.rs  mod.rs  sourcetools.rs
majit/majit-translate/src/translate_legacy/: pipeline.rs
majit/majit-translate/src/translator/: driver.rs  gensupp.rs  interactive.rs  mod.rs  simplify.rs  timing.rs  transform.rs  translator.rs  unsimplify.rs
majit/majit-translate/tests/: test_argument.rs  test_build_flow_integration.rs  test_bytecode_py314.rs  test_epic_acceptance_greps.rs  test_jit_marker_end_to_end.rs  test_make_jitcodes_produces_graph_keyed_output.rs  test_mir_dispatch.rs  test_mir_frontend.rs  test_mir_stress.rs  test_phase_d_find_all_graphs_parity.rs  test_phase_f_all_jitcodes.rs  test_pyopcode_rust_source_adapter_probe.rs  test_pyre_find_all_graphs.rs  test_pyre_pyframe_trait_resolution.rs  test_pyre_trait_resolution.rs  test_pyre_transform_all_handlers.rs  test_pyre_transform_single_handler.rs  test_rust_source_adapter_through_build_types.rs
majit/majit-translate/tests/common/: mod.rs
pyre/pyre-jit-trace/: Cargo.toml  build.rs
pyre/pyre-jit-trace/src/: assembler.rs  call_spec.rs  callbacks.rs  canonical_bridge.rs  descr.rs  frame_layout.rs  helpers.rs  jitcode_dispatch.rs  jitcode_runtime.rs  lib.rs  liveness.rs  metainterp.rs  opcode_handler_impls.rs  opcode_handler_impls_post.template.rs  opcode_handler_impls_pre.template.rs  pyjitcode.rs  pyjitpl.rs  pyre_cpu.rs  runtime_fnaddr_patch.rs  shadow_walker.rs  state.rs  trace.rs  trace_opcode.rs  unpack_state.rs  virtualizable_gen.rs  virtualizable_spec.rs  walker_frame_ops.rs
pyre/pyre-jit-trace/src/jitcode_dispatch/: arith.rs  branch.rs  bridge_subwalk.rs  diag.rs  fbw_state.rs  heapcache_ops.rs  inline_call.rs  mod.rs  residual_call.rs  resume_snapshot.rs  specialize.rs  tests.rs  vable_ops.rs  vstack_mirror.rs
pyre/pyre-jit-trace/src/trace_helpers/: typed_trace.rs
pyre/pyre-jit-trace/tests/: elidable_helper_canary_test.rs  multi_frame_restore_supported.rs
pyre/pyre-jit-trace/tests/snapshots/: opcode_handler_impls.snap
pyre/pyre-native/: Cargo.toml
pyre/pyre-native/src/: hash.rs  lib.rs  zlib.rs
pyre/pyre-object/: Cargo.toml
pyre/pyre-object/src/: array_object.rs  buffer.rs  bufferview.rs  bytearrayobject.rs  bytesobject.rs  celldict.rs  cellobject.rs  complexobject.rs  descriptor.rs  dict_eq_hook.rs  dictmultiobject.rs  dictobject.rs  dictproxyobject.rs  dictstrategy.rs  dictviewobject.rs  enumerateobject.rs  excobject.rs  float_array.rs  floatobject.rs  function.rs  functional.rs  gc_hook.rs  gc_interp.rs  gc_roots.rs  gc_storage.rs  generator.rs  getsetproperty.rs  identitydict.rs  int_array.rs  interp_array.rs  interp_exceptions.rs  interp_itertools.rs  interp_sre.rs  intobject.rs  iterobject.rs  kw_marker.rs  kwargsdict.rs  lib.rs  listobject.rs  lltype.rs  (+22 more)
pyre/pyre-sandbox/: Cargo.toml
pyre/pyre-sandbox/src/: client.rs  controller.rs  lib.rs  protocol.rs  rmarshal.rs  sandlib.rs  seccomp.rs  vfs.rs
pyre/pyre-sandbox/tests/: e2e_interact.rs
pyre/pyre-wasm/: Cargo.toml  build-web.sh
pyre/pyre-wasm-runner/: Cargo.toml
pyre/pyre-wasm-runner/src/: main.rs  wasmi_host.rs
pyre/pyre-wasm/src/: lib.rs
pyre/pyrex/: Cargo.toml
pyre/pyrex/src/: lib.rs  repl.rs
(+797 files in other folders)
