[package]
name = "majit-backend-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cranelift code generation backend for majit JIT compiler"

[dependencies]
majit-ir = { workspace = true }
majit-backend = { workspace = true }
majit-translate = { workspace = true }
majit-gc = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true }
target-lexicon = { workspace = true }

[features]
# Workspace-wide `cargo test --all --features dynasm` also selects this
# crate's tests. The cranelift backend itself has no dynasm code path, but
# its integration tests depend on `majit-metainterp::recorder::Trace`, and
# `majit-metainterp` requires one backend feature to compile.
dynasm = ["majit-metainterp/dynasm"]

[dev-dependencies]
majit-metainterp = { workspace = true }
smallvec = { workspace = true }
