[package]
name = "majit-backend-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly backend for majit — generates wasm bytecodes via wasm-encoder"

[dependencies]
majit-ir = { workspace = true }
majit-backend = { workspace = true }
majit-gc = { workspace = true }
wasm-encoder = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasmparser = { workspace = true }
smallvec = { workspace = true }
