[package]
name = "majit-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for majit JIT integration"

[lib]
proc-macro = true

[features]
cranelift = ["majit-metainterp/cranelift"]
dynasm = ["majit-metainterp/dynasm"]

[dependencies]
syn = { workspace = true, features = ["visit-mut"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
majit-ir = { workspace = true }
majit-metainterp = { workspace = true }
