[package]
name = "pyre-jit-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trace-time JIT for pyre — MIFrame and tracing logic"

[features]
default = ["dynasm"]
cranelift = ["dep:majit-backend-cranelift", "majit-metainterp/cranelift"]
dynasm = ["dep:majit-backend-dynasm", "majit-metainterp/dynasm"]
test-support = []

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
majit-ir = { workspace = true }
majit-macros = { workspace = true }
majit-metainterp = { workspace = true }
majit-translate = { workspace = true }
majit-backend = { workspace = true }
majit-trace = { workspace = true }
majit-gc = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
bincode = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
majit-backend-cranelift = { workspace = true, optional = true }
majit-backend-dynasm = { workspace = true, optional = true }

[build-dependencies]
majit-translate = { workspace = true }
pyre-interpreter = { workspace = true, features = ["dynasm"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
bincode = { workspace = true }
syn = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
