[package]
name = "pyre-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native library backends for pyre, kept outside the LLBC extraction"

[dependencies]
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake2 = { workspace = true }
