[package]
name = "pyre-object"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python object model for pyre interpreter"

[dependencies]
malachite-bigint = { workspace = true }
num-traits = { workspace = true }
majit-gc = { workspace = true }
majit-macros = { workspace = true }
pyre-macros = { workspace = true }
indexmap = { workspace = true }
rustpython-wtf8 = { workspace = true }
