[package]
name = "pyre-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RPython-style sandbox protocol, virtual filesystem and controller for pyre"

[dependencies]
libc = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
