[package]
name = "pyrex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "pyre executable — Python Rewritten"
default-run = "pyre"

[[bin]]
name = "pyre"
path = "src/main.rs"

[[bin]]
name = "pyre-cranelift"
path = "src/bin/pyre-cranelift.rs"
required-features = ["cranelift"]

[[bin]]
name = "pyre-dynasm"
path = "src/bin/pyre-dynasm.rs"
required-features = ["dynasm"]

[features]
default = ["dynasm"]
jit = []  # meta feature: enabled by cranelift or dynasm
cranelift = ["jit", "pyre-jit/cranelift"]
dynasm = ["jit", "pyre-jit/dynasm"]
# Opt-in: use mimalloc as the global allocator. OFF by default. The bignum path
# allocates a fresh limb Vec per rbigint op through the global allocator; the
# platform default (notably the Windows system heap) dominates the per-op cost,
# so mimalloc roughly halves bignum-heavy workloads (fib_loop beats PyPy).
# Enable with e.g. `--features dynasm,mimalloc`.
mimalloc = ["dep:mimalloc"]
# Deterministic GC stress: forces a full collection at the start of every
# allocation (opt in at runtime via MAJIT_GC_STRESS). Test/diagnostic only —
# uncomment to build a GC-repro binary (see
# bench/synth/_pending/cranelift_finalizer_ordering_crash.py).
# gc_stress = ["pyre-jit/gc_stress"]
# Build the interpreter as an RPython-style sandbox client: every mediated OS
# call routes through host_seam's marshalling trampoline (see pyre-interpreter).
sandbox = ["pyre-interpreter/sandbox"]
# Backwards-compatible alias. The seccomp-bpf syscall allowlist is now installed
# by default in any Linux `sandbox` build (see the install site in lib.rs and
# pyre-sandbox::seccomp), so this adds nothing over `sandbox`; it is retained so
# `--features seccomp` keeps working.
seccomp = ["sandbox"]

[dependencies]
pyre-object = { workspace = true }
pyre-interpreter = { workspace = true }
pyre-jit = { workspace = true }
majit-metainterp = { workspace = true }
lexopt = { workspace = true }
rustpython-compiler = { workspace = true }
dirs = { workspace = true }
rustyline = { workspace = true }
mimalloc = { version = "0.1", optional = true }

# The sandbox controller (`pyre interact`) and the seccomp backstop are
# unix-only; on other targets `pyre-sandbox` is neither referenced nor linked.
[target.'cfg(unix)'.dependencies]
pyre-sandbox = { workspace = true }

[dev-dependencies]
# The repl `#[test]`s build str-keyed dicts without booting the JIT (which is
# where production installs the hash hook), so enable pyre-interpreter's
# `test-hooks` feature to install the thread-local hook on the test threads.
pyre-interpreter = { workspace = true, features = ["test-hooks"] }
